Improved the app (see description)
- Removed some remaining onClick functions
- Added an actionbar to each activity (should probably be added to the
documentation)
- Categorised the strings and removed several hard-coded strings from
the layout files
- Made a sketch for the inbox activity (so not done yet)
- Finished sketches for almost all activities
- Made some white images for the actionbar
- Changed all buttons to be blue with white text
- Improved the layout of activities (to fit the actionbar)

--- a/android-app/app/src/main/res/layout/activity_change_password.xml
+++ b/android-app/app/src/main/res/layout/activity_change_password.xml
@@ -1,87 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_init"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="2">
+    android:orientation="vertical">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/action_bar_layout" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="@dimen/activity_margin"
+        android:orientation="vertical">
 
+        <!-- Small change password title
         <TextView
-            android:text="Change password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:id="@+id/textViewChangePassword"
-            android:textColor="@color/colorBlack" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
+            android:text="Change password"
+            android:textColor="@color/colorBlack"
+            android:textSize="20sp" />
+        -->
 
         <TextView
-            android:text="@string/changePasswordInfo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/textViewChangePasswordInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
+            android:text="@string/changePasswordInfo"
             android:textColor="@color/colorBlack" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
             android:id="@+id/editTextChangePasswordPassword"
-            android:hint="Password" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
+            android:layout_margin="@dimen/view_margin"
             android:ems="10"
-            android:id="@+id/editTextChangePasswordVerifyPassword"
-            android:hint="Confirm password" />
-    </LinearLayout>
+            android:hint="@string/password"
+            android:inputType="textPassword" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        <EditText
+            android:id="@+id/editTextChangePasswordVerifyPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
+            android:ems="10"
+            android:hint="@string/verifyPassword"
+            android:inputType="textPassword" />
 
         <Button
-            android:text="Next"
+            android:id="@+id/buttonChangePasswordNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonChangePasswordNext"/>
+            android:layout_margin="@dimen/view_margin"
+            android:background="@drawable/my_button_bg"
+            android:text="@string/next"
+            android:textColor="@color/colorWhite" />
     </LinearLayout>
 </LinearLayout>
