--- a/android-app/app/src/main/res/drawable/my_inbox_button_bg.xml
+++ b/android-app/app/src/main/res/drawable/my_inbox_button_bg.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/colorPrimary" />
-    <stroke android:width="5px" android:color="@color/colorPrimaryDark" />
+    <stroke
+        android:width="5px"
+        android:color="@color/colorPrimaryDark" />
 </shape>
