--- a/android-app/app/src/main/res/layout/activity_forgot_password.xml
+++ b/android-app/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,89 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_init"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="2">
+    android:orientation="vertical">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/action_bar_layout" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="@dimen/activity_margin"
         android:orientation="vertical">
 
+        <!-- Small forgot password title
         <TextView
             android:id="@+id/textViewForgotPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
             android:text="Resetting lost password"
             android:textColor="@color/colorBlack"
             android:textSize="20sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
+        -->
 
         <TextView
             android:id="@+id/textViewForgotPasswordInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
             android:text="@string/codeInfo"
             android:textColor="@color/colorBlack" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
 
         <EditText
             android:id="@+id/editTextForgotPasswordCode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
             android:ems="10"
-            android:hint="Fill in code"
+            android:hint="@string/forgotPasswordCode"
             android:inputType="textPersonName" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
 
         <Button
             android:id="@+id/buttonForgotPasswordNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="confirmCode"
-            android:text="Next" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="horizontal">
+            android:layout_margin="@dimen/view_margin"
+            android:background="@drawable/my_button_bg"
+            android:text="@string/next"
+            android:textColor="@color/colorWhite" />
 
         <TextView
             android:id="@+id/textViewForgotPasswordResendCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="resendCode"
-            android:text="Did not receive a code?"
+            android:layout_margin="@dimen/view_margin"
+            android:text="@string/forgotPasswordNoCode"
             android:textColor="@color/colorBlue" />
     </LinearLayout>
 </LinearLayout>
