--- a/android-app/app/src/main/res/layout/activity_inbox.xml
+++ b/android-app/app/src/main/res/layout/activity_inbox.xml
@@ -5,25 +5,30 @@
     android:orientation="vertical"
     android:weightSum="6">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/action_bar_layout" />
+
     <ListView
-        android:id="@+id/InboxListViewFeed"
+        android:id="@+id/inboxListViewFeed"
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="5"/>
+        android:layout_weight="5" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_weight="1.00">
+        android:layout_weight="1.00"
+        android:gravity="center">
 
         <LinearLayout
+            android:id="@+id/inboxButton"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:scaleType="fitCenter"
-            android:background="@drawable/my_inbox_button_bg">
-        </LinearLayout>
+            android:background="@drawable/my_inbox_button_bg"
+            android:orientation="horizontal"
+            android:scaleType="fitCenter" />
     </LinearLayout>
 
 </LinearLayout>
