--- a/android-app/app/src/main/res/layout/activity_inbox_item.xml
+++ b/android-app/app/src/main/res/layout/activity_inbox_item.xml
@@ -4,9 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/action_bar_layout" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/activity_margin"
         android:orientation="vertical"
         android:weightSum="1">
 
@@ -22,10 +27,10 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/view_margin"
                 android:text="Author: [insert name here]"
                 android:textColor="@color/colorBlack"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -37,7 +42,7 @@
             <LinearLayout
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/view_margin"
                 android:background="@drawable/my_popup_bg"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -60,32 +65,32 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0px"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/view_margin"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="Available points: 10"
                 android:textColor="@color/colorBlack"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0px"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/view_margin"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="Picture taken at yesterday 21:48"
                 android:textColor="@color/colorBlack"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0px"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/view_margin"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="Remaining time: 3:48:30"
                 android:textColor="@color/colorBlack"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -96,12 +101,12 @@
             android:weightSum="1">
 
             <Button
+                android:id="@+id/buttonGuess"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/view_margin"
                 android:background="@drawable/my_button_bg"
-                android:onClick="guessLocation"
-                android:text="Guess location"
+                android:text="@string/inboxItemButton"
                 android:textColor="@color/colorWhite" />
         </LinearLayout>
     </LinearLayout>
