--- a/android-app/app/src/main/res/layout/activity_load.xml
+++ b/android-app/app/src/main/res/layout/activity_load.xml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:weightSum="3">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/AppTheme"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
+    <!-- TODO: remove this empty layout in some way -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -34,7 +24,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:background="@drawable/tuego"
-            android:id="@+id/Logo" />
+            android:id="@+id/logo" />
     </LinearLayout>
 
     <LinearLayout
@@ -48,16 +38,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/progressBar"
-            android:progressTint="#d6004a"
-            android:paddingBottom="10dp" />
+            android:progressTint="#d6004a"/>
 
+        <!-- For loading text
         <TextView
             android:text="Loading..."
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textColor="@color/colorBlack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:layout_gravity="center" />
+            -->
     </LinearLayout>
 </LinearLayout>
