--- a/android-app/app/src/main/res/layout/activity_login.xml
+++ b/android-app/app/src/main/res/layout/activity_login.xml
@@ -3,86 +3,65 @@
     android:id="@+id/activity_init"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="2">
+    android:orientation="vertical">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/action_bar_layout" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/activity_margin"
         android:orientation="vertical">
 
+        <!-- for small login title
         <TextView
             android:id="@+id/textViewLogin"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
             android:text="Account login"
             android:textColor="@color/colorBlack"
-            android:textSize="20dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
+            android:textSize="20sp" />
+        -->
 
         <EditText
             android:id="@+id/editTextLoginUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
             android:ems="10"
-            android:hint="Username / Email address"
-            android:inputType="textPersonName"
-            android:onClick="login" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
+            android:hint="@string/usernameEmailAddress"
+            android:inputType="textPersonName"/>
 
         <EditText
             android:id="@+id/editTextLoginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/view_margin"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
 
         <Button
             android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="horizontal">
+            android:layout_margin="@dimen/view_margin"
+            android:background="@drawable/my_button_bg"
+            android:text="@string/loginButton"
+            android:textColor="@color/colorWhite" />
 
         <TextView
             android:id="@+id/textViewLoginToForgotPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Forgot password?"
+            android:layout_margin="@dimen/view_margin"
+            android:text="@string/loginToForgotPassword"
             android:textColor="@color/colorBlue" />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
+
+
