--- a/android-app/app/src/main/res/layout/action_bar_layout.xml
+++ b/android-app/app/src/main/res/layout/action_bar_layout.xml
@@ -6,3 +6,4 @@
     android:background="?attr/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/AppTheme"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
