--- a/android-app/app/src/main/res/layout/activity_leaderboard.xml
+++ b/android-app/app/src/main/res/layout/activity_leaderboard.xml
@@ -11,8 +11,8 @@
         layout="@layout/action_bar_layout" />
 
     <ListView
+        android:id="@+id/leaderboardList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/leaderboardList">
+        android:layout_height="match_parent">
     </ListView>
 </LinearLayout>
