--- a/android-app/app/src/main/res/layout/activity_login.xml
+++ b/android-app/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
             android:text="@string/loginButton"
             android:textColor="@color/colorWhite" />
 
+        <!-- For password recovery
         <TextView
             android:id="@+id/textViewLoginToForgotPassword"
             android:layout_width="wrap_content"
@@ -60,6 +61,7 @@
             android:layout_margin="@dimen/view_margin"
             android:text="@string/loginToForgotPassword"
             android:textColor="@color/colorBlue" />
+        -->
 
     </LinearLayout>
 </LinearLayout>
