--- a/android-app/app/src/main/res/layout/activity_inbox.xml
+++ b/android-app/app/src/main/res/layout/activity_inbox.xml
@@ -9,26 +9,34 @@
         android:id="@+id/toolbar"
         layout="@layout/action_bar_layout" />
 
-    <ListView
-        android:id="@+id/inboxListViewFeed"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="5" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_gravity="center"
-        android:layout_weight="1.00"
-        android:gravity="center">
+        android:layout_height="match_parent" >
+
+        <ListView
+            android:id="@+id/inboxListViewFeed"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <LinearLayout
-            android:id="@+id/inboxButton"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:background="@drawable/my_inbox_button_bg"
-            android:orientation="horizontal"
-            android:scaleType="fitCenter" />
-    </LinearLayout>
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true">
 
+            <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/inboxButton"
+                    android:src="@drawable/ic_add_black_24dp"
+                    android:tint="@color/colorWhite"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clickable="true"
+                    android:layout_margin = "15dp" />
+        </LinearLayout>
+
+
+    </RelativeLayout>
 </LinearLayout>
