--- a/android-app/app/src/main/res/layout/inbox_item.xml
+++ b/android-app/app/src/main/res/layout/inbox_item.xml
@@ -6,14 +6,14 @@
     android:weightSum="1">
 
     <ImageView
-        android:id="@+id/itemImage"
+        android:id="@+id/feedItemImage"
         android:layout_width="75dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:src="@drawable/ic_camera_alt_black_48dp" />
 
     <TextView
-        android:id="@+id/itemAuthor"
+        android:id="@+id/feedItemAuthor"
         android:layout_width="0px"
         android:layout_height="match_parent"
         android:layout_weight="0.6"
@@ -28,7 +28,7 @@
         android:weightSum="3">
 
         <TextView
-            android:id="@+id/itemTimeRemaining"
+            android:id="@+id/feedItemTimeRemaining"
             android:layout_width="wrap_content"
             android:layout_height="0px"
             android:layout_weight="1"
@@ -36,7 +36,7 @@
             android:text="[Time remaining]" />
 
         <TextView
-            android:id="@+id/itemTimeTaken"
+            android:id="@+id/feedItemTimeTaken"
             android:layout_width="wrap_content"
             android:layout_height="0px"
             android:layout_weight="1"
@@ -44,7 +44,7 @@
             android:text="[Time taken]" />
 
         <TextView
-            android:id="@+id/itemPoints"
+            android:id="@+id/feedItemPoints"
             android:layout_width="wrap_content"
             android:layout_height="0px"
             android:layout_weight="1"
