--- a/android-app/app/src/main/res/layout/leaderboard_item.xml
+++ b/android-app/app/src/main/res/layout/leaderboard_item.xml
@@ -7,34 +7,37 @@
 
     <TextView
         android:id="@+id/itemRank"
-        android:layout_width="75dp"
-        android:layout_height="match_parent"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_margin="15dp"
+        android:background="@drawable/circle"
         android:gravity="center"
-        android:text="[Rank]" />
-
-    <TextView
-        android:id="@+id/itemName"
-        android:layout_width="0px"
-        android:layout_height="match_parent"
-        android:layout_weight="0.6"
-        android:gravity="center"
-        android:text="[User name]" />
+        android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />
 
     <LinearLayout
-        android:layout_width="0px"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.4"
+        android:gravity="center_vertical"
         android:orientation="vertical"
         android:weightSum="3">
 
         <TextView
+            android:id="@+id/itemName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left|center_vertical"
+            android:textAppearance="@android:style/TextAppearance.Material.Subhead" />
+
+        <TextView
             android:id="@+id/LBitemPoints"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="[amount points]" />
+            android:layout_height="wrap_content"
+            android:gravity="left|center_vertical"
+            android:text="[POINTS]"
+            android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
 
     </LinearLayout>
+
 </LinearLayout>
