--- a/android-app/app/src/main/res/layout/inbox_item.xml
+++ b/android-app/app/src/main/res/layout/inbox_item.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/feedItemLayout"
     android:layout_width="match_parent"
     android:layout_height="75dp"
     android:orientation="horizontal"
-    android:weightSum="1"
-    android:id="@+id/feedItemLayout">
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/feedItemImage"
         android:layout_width="75dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:alpha=".55"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/feedImageDescription"
         android:cropToPadding="true"
-        android:scaleType="center"
+        android:scaleType="centerInside"
         android:src="@drawable/ic_camera_alt_black_48dp" />
 
     <LinearLayout
@@ -27,19 +27,26 @@
         <TextView
             android:id="@+id/feedItemAuthor"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0px"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="@dimen/view_margin"
+            android:layout_weight="0.7"
             android:text="[Author name]"
             android:textAppearance="@android:style/TextAppearance.Material.Subhead" />
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0px"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="@dimen/view_margin"
+            android:layout_weight="0.7"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/feedItemTimeTakenHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="0.5"
                 android:gravity="center"
                 android:text="@string/itemTimeTaken"
@@ -49,6 +56,7 @@
                 android:id="@+id/feedItemTimeTaken"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="0.5"
                 android:gravity="center"
