Updated confirmation formula and updated inbox layout

--- a/android-app/app/src/main/res/layout/inbox_item.xml
+++ b/android-app/app/src/main/res/layout/inbox_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/feedItemLayout"
     android:layout_width="match_parent"
     android:layout_height="75dp"
@@ -8,9 +9,10 @@
 
     <ImageView
         android:id="@+id/feedItemImage"
-        android:layout_width="75dp"
-        android:layout_height="match_parent"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/feedImageDescription"
         android:cropToPadding="true"
