--- a/android-app/app/src/main/res/layout/activity_post_picture.xml
+++ b/android-app/app/src/main/res/layout/activity_post_picture.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:gravity="center"
-            android:scaleType="centerInside" />
+            android:scaleType="centerCrop" />
 
         <!--
         <TextView
